feat: integrate AI journey recommendations